welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:7: error: ';' expected but '=' found.
		if (nums(x)==nums(y)==nums(z) && x!=y!=z) {return=false}
                                                                 ^